--- a/app/src/main/res/layout/activity_tarjeta.xml
+++ b/app/src/main/res/layout/activity_tarjeta.xml
@@ -7,11 +7,116 @@
     android:background="@drawable/fondotarjeta"
     tools:context=".actividades.actividades.usuario.pago.Tarjeta_Activity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="377dp"
+        android:layout_height="638dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="88dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/pagar" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="377dp"
+            android:layout_height="635dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="1dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/pagar" />
+
+        <EditText
+            android:id="@+id/editTextText5"
+            android:layout_width="126dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="4dp"
+            android:ems="10"
+            android:hint="Nombre"
+            android:inputType="text"
+            android:background="@android:color/transparent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextNumber5" />
+
+        <EditText
+            android:id="@+id/editTextNumber4"
+            android:layout_width="254dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="224dp"
+            android:ems="10"
+            android:hint="Número de Tarjeta"
+            android:background="@android:color/transparent"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/editTextNumber5"
+            android:layout_width="127dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:hint="MM/AA"
+            android:inputType="number"
+            android:background="@android:color/transparent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextNumber4" />
+
+        <EditText
+            android:id="@+id/editTextNumber6"
+            android:layout_width="98dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:hint="CVV"
+            android:inputType="number"
+            android:background="@android:color/transparent"
+            app:layout_constraintStart_toEndOf="@+id/editTextNumber5"
+            app:layout_constraintTop_toBottomOf="@+id/editTextNumber4" />
+
+        <EditText
+            android:id="@+id/editTextTextEmailAddress2"
+            android:layout_width="269dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="5dp"
+            android:background="@android:color/transparent"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextText6" />
+
+        <TextView
+            android:id="@+id/textView26"
+            android:layout_width="312dp"
+            android:layout_height="34dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="20dp"
+            android:text="Pagar S/ 0.00"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />
+
+        <EditText
+            android:id="@+id/editTextText6"
+            android:layout_width="112dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="4dp"
+            android:ems="10"
+            android:hint="Apellido"
+            android:background="@android:color/transparent"
+            android:inputType="text"
+            app:layout_constraintStart_toEndOf="@+id/editTextText5"
+            app:layout_constraintTop_toBottomOf="@+id/editTextNumber6" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
