--- a/app/src/main/res/layout/activity_consultar_reserva_user.xml
+++ b/app/src/main/res/layout/activity_consultar_reserva_user.xml
@@ -11,18 +11,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="44dp"
         android:text="VOLVER"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtv_consultasRsv_user" />
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="270dp"
-        android:layout_height="44dp"
+        android:layout_width="337dp"
+        android:layout_height="39dp"
         android:layout_marginStart="43dp"
         android:layout_marginTop="33dp"
-        android:text="CONSULTAR RESERVAS"
+        android:text="CONSULTAR MIS RESERVAS"
         android:textColor="#C89F25"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -31,8 +31,8 @@
 
     <TextView
         android:id="@+id/txtv_consultasRsv_user"
-        android:layout_width="280dp"
-        android:layout_height="376dp"
+        android:layout_width="281dp"
+        android:layout_height="442dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="24dp"
         android:singleLine="false"
