--- a/app/src/debug/res/layout/activity_pago.xml
+++ b/app/src/debug/res/layout/activity_pago.xml
@@ -8,94 +8,74 @@
     android:background="@drawable/fondo1"
     tools:context=".actividades.actividades.usuario.pago.PagoActivity">
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_margin="25dp"
-      android:orientation="vertical"
-      tools:layout_editor_absoluteX="-51dp"
-      tools:layout_editor_absoluteY="25dp">
+  <androidx.constraintlayout.widget.ConstraintLayout
+      android:layout_width="370dp"
+      android:layout_height="565dp"
+      android:layout_marginStart="10dp"
+      android:layout_marginTop="50dp"
+      android:layout_marginEnd="10dp"
+      android:layout_marginBottom="50dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent">
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="374dp"
+        android:layout_height="557dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        android:contentDescription="Foto de fondo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/elegir_pago" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:text="@string/biepag"
-        android:textColor="@color/logTitIniciar"
-        android:textSize="45dp" />
+        android:id="@+id/txtvSalirPay"
+        android:layout_width="49dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="312dp"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <RadioGroup
+        android:id="@+id/rgPay"
+        android:layout_width="285dp"
+        android:layout_height="221dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="180dp"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2">
 
-      <ImageView
-          android:layout_width="140dp"
-          android:layout_height="98dp"
-          android:src="@drawable/tarjetavisa" />
+      <RadioButton
+          android:id="@+id/rbTarjetaPay"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content" />
 
-      <Button
-          android:id="@+id/biepagBtnTarjeta"
-          android:layout_width="130dp"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="30dp"
-          android:layout_marginTop="10dp"
-          android:layout_marginRight="15dp"
-          android:layout_weight="1"
-          android:backgroundTint="@color/btnRegOrange"
-          android:hint="@string/biepagBtnTarjeta"
-          app:cornerRadius="20dp"
-          android:textAllCaps="false"
-          android:textColorHint="@color/white" />
+      <TextView
+          android:id="@+id/textView27"
+          android:layout_width="match_parent"
+          android:layout_height="84dp" />
 
-    </LinearLayout>
+      <RadioButton
+          android:id="@+id/rbYape"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content" />
+    </RadioGroup>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <TextView
+        android:id="@+id/txtvContinuarPay"
+        android:layout_width="266dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintStart_toStartOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/rgPay" />
 
-      <ImageView
-          android:layout_width="140dp"
-          android:layout_height="98dp"
-          android:src="@drawable/yapeimg" />
-
-      <Button
-          android:id="@+id/biepagBtnYape"
-          android:layout_width="130dp"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="30dp"
-          android:layout_marginTop="10dp"
-          android:layout_marginRight="15dp"
-          android:layout_weight="1"
-          android:backgroundTint="@color/btnRegOrange"
-          android:hint="@string/biepagBtnYape"
-          app:cornerRadius="20dp"
-          android:textAllCaps="false"
-          android:textColorHint="@color/white" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-      <Button
-          android:id="@+id/biepagBtnReg"
-          android:layout_width="8dp"
-          android:layout_height="match_parent"
-          android:layout_marginLeft="200dp"
-          android:layout_marginRight="10dp"
-          android:layout_weight="1"
-          android:backgroundTint="@color/btnRegOrange"
-          android:hint="@string/biepagBtnReg"
-          android:textAllCaps="false"
-          android:textColorHint="@color/white"
-          app:cornerRadius="20dp" />
-
-    </LinearLayout>
-
-
-  </LinearLayout>
-
+  </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
