--- a/app/src/main/res/layout/activity_tabla.xml
+++ b/app/src/main/res/layout/activity_tabla.xml
@@ -412,7 +412,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="151dp"
         android:layout_marginTop="37dp"
-        android:text="R"
+        android:text="TEST RESERVAR"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblCantidadPagar_TRU" />
 
