--- a/app/src/main/res/layout/activity_tarjeta.xml
+++ b/app/src/main/res/layout/activity_tarjeta.xml
@@ -143,7 +143,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="64dp"
             android:layout_marginTop="84dp"
-            android:text="testR"
+            android:text="TEST PAGO"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="@+id/txtvPagarPAY"
             app:layout_constraintTop_toBottomOf="@+id/txtvPagarPAY" />
 
