--- a/app/src/main/res/layout/activity_tabla.xml
+++ b/app/src/main/res/layout/activity_tabla.xml
@@ -415,6 +415,7 @@
         android:text="TEST RESERVAR"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblCantidadPagar_TRU" />
+        app:layout_constraintTop_toBottomOf="@+id/lblCantidadPagar_TRU"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
