--- a/app/src/main/res/layout/activity_listar_reservas_admin.xml
+++ b/app/src/main/res/layout/activity_listar_reservas_admin.xml
@@ -30,12 +30,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnListarRsvCLI_Admin" />
 
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="305dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="11dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12">
+
+        <RadioButton
+            android:id="@+id/radioButton4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="AÑO" />
+
+        <RadioButton
+            android:id="@+id/radioButton5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="MES" />
+
+        <RadioButton
+            android:id="@+id/radioButton6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="SEMANA" />
+
+    </RadioGroup>
+
     <FrameLayout
         android:id="@+id/frml_Carga"
         android:layout_width="367dp"
         android:layout_height="203dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="84dp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spnListarRsvCLI_Admin">
@@ -46,8 +75,8 @@
         android:id="@+id/btnSalir_ListaRsvCLI_Admin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="40dp"
         android:text="Salir"
         app:layout_constraintStart_toEndOf="@+id/btnActualizar_ListaRsvCLI_Admin"
         app:layout_constraintTop_toBottomOf="@+id/txtvMonto_Adm" />
@@ -57,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="40dp"
         android:text="ACTUALIZAR"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtvMonto_Adm" />
@@ -65,22 +94,11 @@
     <Spinner
         android:id="@+id/spnListarRsvCLI_Admin"
         android:layout_width="305dp"
-        android:layout_height="24dp"
+        android:layout_height="48dp"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="259dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="12dp"
-        android:text="Seleccione una losa:"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <TextView
         android:id="@+id/txtvMonto_Adm"
@@ -92,4 +110,15 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtvListadoRsvCLI_Admin" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="259dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="17dp"
+        android:text="Seleccione una losa:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
