--- a/app/src/main/res/layout/activity_actualizar_datos_user.xml
+++ b/app/src/main/res/layout/activity_actualizar_datos_user.xml
@@ -146,6 +146,7 @@
             android:id="@+id/btnSALIR_ActDatos_Actv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="48dp"
             android:text="VOLVER" />
 
     </LinearLayout>
