--- a/app/src/main/res/layout/activity_falla_load.xml
+++ b/app/src/main/res/layout/activity_falla_load.xml
@@ -9,10 +9,10 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="349dp"
-        android:layout_height="427dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="192dp"
+        android:layout_height="181dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView26"
         app:srcCompat="@drawable/falla_carga" />
@@ -22,10 +22,11 @@
         android:layout_width="329dp"
         android:layout_height="83dp"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="26dp"
         android:text="DISCULPE LAS MOLESTIAS"
         android:textAlignment="center"
+        android:textColor="#9C27B0"
         android:textSize="34sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,23 +38,54 @@
         android:layout_width="176dp"
         android:layout_height="61dp"
         android:layout_marginStart="117dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="118dp"
         android:text="RECARGAR"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView28" />
+        app:layout_constraintTop_toBottomOf="@+id/txtvZoneFailLoad" />
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/txtvBdFailLoad"
         android:layout_width="236dp"
         android:layout_height="58dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="34dp"
-        android:text="No se pudo conectar al Servidor"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="91dp"
+        android:text="bd"
         android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtvInternetFailLoad" />
+
+    <TextView
+        android:id="@+id/txtvZoneFailLoad"
+        android:layout_width="238dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="89dp"
+        android:text="zone"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtvBdFailLoad" />
+
+    <TextView
+        android:id="@+id/txtvInternetFailLoad"
+        android:layout_width="231dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="96dp"
+        android:text="GOOGLE"
+        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
