--- a/app/src/main/res/layout/activity_lista_u.xml
+++ b/app/src/main/res/layout/activity_lista_u.xml
@@ -7,4 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".actividades.actividades.admin.ListaU">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvListarUsersForADM"
+            android:layout_width="358dp"
+            android:layout_height="686dp"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="72dp"
+            android:layout_marginEnd="27dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
