--- a/app/src/main/res/layout/activity_consultar_reserva_user.xml
+++ b/app/src/main/res/layout/activity_consultar_reserva_user.xml
@@ -6,57 +6,80 @@
     android:layout_height="match_parent"
     tools:context=".actividades.actividades.usuario.ConsultarReservaUser_Activity">
 
-    <Button
-        android:id="@+id/btnVolver_ConsultRsvUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="44dp"
-        android:text="VOLVER"
+    <LinearLayout
+        android:layout_width="363dp"
+        android:layout_height="334dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="24dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtv_consultasRsv_user" />
+        app:layout_constraintTop_toBottomOf="@+id/tablalListarRsvUser">
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="337dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="33dp"
-        android:text="CONSULTAR MIS RESERVAS"
-        android:textColor="#C89F25"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="CONSULTAR MIS RESERVAS"
+            android:textColor="#C89F25"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/txtv_consultasRsv_user"
-        android:layout_width="281dp"
-        android:layout_height="442dp"
-        android:layout_marginStart="60dp"
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="match_parent"
+            android:layout_height="27dp"
+            android:layout_marginTop="15dp"
+            android:text="Seleecione una losa:"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/spnConsultarRsv_CLI"
+            android:layout_width="331dp"
+            android:layout_height="48dp" />
+
+        <TextView
+            android:id="@+id/txtv_consultasRsv_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:singleLine="false"
+            android:text="Cargando..."
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/btnVolver_ConsultRsvUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="VOLVER" />
+    </LinearLayout>
+
+    <TableLayout
+        android:id="@+id/tablalListarRsvUser"
+        android:layout_width="340dp"
+        android:layout_height="236dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
-        android:singleLine="false"
-        android:text="Cargando..."
-        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spnConsultarRsv_CLI" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="231dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="8dp"
-        android:text="Seleecione una losa:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
-    <Spinner
-        android:id="@+id/spnConsultarRsv_CLI"
-        android:layout_width="331dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="2dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </TableLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
