--- a/app/src/main/res/layout/activity_consultar_reserva_user.xml
+++ b/app/src/main/res/layout/activity_consultar_reserva_user.xml
@@ -6,17 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".actividades.actividades.usuario.ConsultarReservaUser_Activity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_consultar_rsv_user"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="363dp"
         android:layout_height="334dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="220dp"
         android:layout_marginEnd="24dp"
         android:orientation="vertical"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tablalListarRsvUser">
+        app:layout_constraintTop_toTopOf="@+id/rv_consultar_rsv_user">
 
         <TextView
             android:id="@+id/textView8"
@@ -54,32 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="VOLVER" />
+
     </LinearLayout>
-
-    <TableLayout
-        android:id="@+id/tablalListarRsvUser"
-        android:layout_width="340dp"
-        android:layout_height="236dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
